fix/ img read me

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
                 <div class="navbar">
                     <ul class="navbar-links">
                         <li>
-                            <p><a href="./pages/serveurMutualisé.html"><i class="fa-solid fa-users"></i>Serveur Mutualisé</a></p>
+                            <p><a href="./pages/serveurMutualisé.html"><i class="fa-solid fa-users"></i>Serveur
+                                    Mutualisé</a></p>
                         </li>
                         <li>
                             <p><a href="./pages/serveurDédié.html"><i class="fa-solid fa-user"></i>Serveur Dédié</a></p>
                         </li>
                         <li>
-                            <p><a href="./pages/solutionCloud.html"><i class="fa-solid fa-cloud"></i>Solution Cloud</a></p>
+                            <p><a href="./pages/solutionCloud.html"><i class="fa-solid fa-cloud"></i>Solution Cloud</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
