--- a/pages/serveurDédié.html
+++ b/pages/serveurDédié.html
@@ -37,14 +37,14 @@
         </nav>
     </header>
     <main>
-        <section class="search-bar-container">
+        <div class="search-bar-container">
             <div class="search-bar">
                 <form>
                     <input type="search" placeholder="Que recherchez-vous?">
                     <button type="submit">Rechercher</button>
                 </form>
             </div>
-        </section>
+        </div>
         <section class="maxwidth">
             <div class="title-server">
                 <h2>Le serveur dedié</h2>
